<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_dog"
        tools:context=".ui.DogDetailsFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_constraints"
            android:layout_width="280dp"
            android:layout_height="220dp"
            android:layout_marginTop="20dp"
            android:background="@color/colorWhite"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_goneMarginTop="50dp">

            <ImageView
                android:id="@+id/imageView_dogDetails"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="4dp"
                android:scaleType="centerCrop"
                android:src="@mipmap/ic_launcher"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="100dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout_constraints">

            <androidx.cardview.widget.CardView
                android:id="@+id/name_cardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="50dp"
                app:cardCornerRadius="10dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/layout_constraints">

                <TextView
                    android:id="@+id/text_nameDetails"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_gravity="center_horizontal"
                    android:background="@color/colorWhite"
                    android:gravity="center"
                    android:text="@string/name"
                    android:textColor="@color/colorBlack"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:id="@+id/temperament_cardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                app:cardCornerRadius="10dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/name_cardView">

                <TextView
                    android:id="@+id/text_temperamentDetails"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorWhite"
                    android:gravity="center_horizontal"
                    android:maxLines="2"
                    android:layout_gravity="center"
                    android:text="@string/temperament"
                    android:textColor="@color/colorBlack"
                    android:textSize="20sp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    tools:layout_editor_absoluteY="325dp" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/weight_cardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                app:cardCornerRadius="10dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/name_cardView">

                <TextView
                    android:id="@+id/text_weightDetails"
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:background="@color/colorWhite"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/weight"
                    android:textColor="@color/colorBlack"
                    android:textSize="15sp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/text_temperamentDetails" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/height_cardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                app:cardCornerRadius="10dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/name_cardView">

                <TextView
                    android:id="@+id/text_heightDetails"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorWhite"
                    android:gravity="center"
                    android:text="@string/height"
                    android:textColor="@color/colorBlack"
                    android:textSize="15sp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/text_weightDetails" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/breed_for_cardView"
                android:layout_width="match_parent"
                android:foregroundGravity="center_horizontal"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                app:cardCornerRadius="10dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/name_cardView">

                <TextView
                    android:id="@+id/text_bredFor"
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:background="@color/colorWhite"
                    android:gravity="center"
                    android:text="@string/breed_for"
                    android:textColor="@color/colorBlack"
                    android:textSize="15sp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/text_heightDetails" />
            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:id="@+id/breed_group_cardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:foregroundGravity="center_horizontal"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                app:cardCornerRadius="10dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/name_cardView">

                <TextView
                    android:id="@+id/text_breedGroup"
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:background="@color/colorWhite"
                    android:gravity="center"
                    android:text="@string/breed_group"
                    android:textColor="@color/colorBlack"
                    android:textSize="15sp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/text_bredFor" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/life_span_cardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:foregroundGravity="center_horizontal"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                app:cardCornerRadius="10dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/name_cardView">

                <TextView
                    android:id="@+id/text_lifeSpan"
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:background="@color/colorWhite"
                    android:gravity="center"
                    android:text="@string/life_span"
                    android:textColor="@color/colorBlack"
                    android:textSize="15sp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/text_breedGroup" />

            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>